@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1385: Caching Encoders don't cache (Johannes Schulte, Manoj Awasthi via ssc)
+
   MAHOUT-1527: Fix wikipedia classifier example (Andrew Palumbo via ssc)
 
   MAHOUT-1542: Tutorial for playing with Mahout's Spark shell (ssc)
